# agentsandpredictions

Group-Project-AI-Engine-Test/Group-Project-AI-Engine-Test/: Dockerfile  __init__.py  render.yaml  requirements.txt
Group-Project-AI-Engine-Test/Group-Project-AI-Engine-Test/config/: agents.yaml  tasks.yaml
Group-Project-AI-Engine-Test/Group-Project-AI-Engine-Test/src/: PricePredictions.py  agents.py  api.py  crew.py  database.py  financial_interface.py  main.py  tasks.py  utils.py
Group-Project-AI-Engine/SPRINT ONE/src/financial_analyst_crew/: crew.py  main.py
Group-Project-AI-Engine/SPRINT ONE/src/financial_analyst_crew/config/: tasks.yaml
Group-Project-AI-Engine/SPRINT THREE/financial_analyst_crew/: Dockerfile  pyproject.toml  requirements.txt
Group-Project-AI-Engine/SPRINT THREE/financial_analyst_crew/src/: PricePredictions.py  api.py  crew.py  database.py  financial_interface.py  main.py
Group-Project-AI-Engine/SPRINT TWO/: api.py  database.py  financial_interface.py  pyproject.toml
Group-Project-AI-Engine/SPRINT TWO/src/financial_analyst_crew/: agents.py  crew.py  tasks.py
Group-Project-AI-Engine/SPRINT TWO/src/financial_analyst_crew/config/: agents.yaml  tasks.yaml
SPRINT ONE/: PricePredictions.py
SPRINT ONE/src/financial_analyst_crew/config/: agents.yaml
